# glfw-template

./: .gitignore  CMakeLists.txt  README.md  run
examples/: CMakeLists.txt  lab11-2.cpp  lab11.cpp  lab3-1.cpp  lab3-2.cpp  lab4-1.cpp  lab4-2.cpp  lab4-3.cpp  lab7.cpp  lab9.cpp
include/opengllib/: App.hpp  Color.hpp  Shape.hpp  Sprite.hpp  Texture2D.hpp  Vector2f.hpp  Vector3f.hpp
lib/: CMakeLists.txt
lib/glad/include/glad/: glad.h
src/: App.cpp  CMakeLists.txt  Shape.hpp  Sprite.cpp  Texture2D.cpp  Vector2f.cpp  Vector2f.hpp  Vector3f.hpp  Window.cpp  Window.hpp  lab2-1.cpp  lab2-2.cpp  lab3-1.cpp  lab4-1.cpp  main.cpp
